UI on image cards

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,9 @@
 <app-header />
 
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 p-4 gap-4">
-  <app-island-card *ngFor="let island of islands" [title]="island.title" />
+<div
+  class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 p-2 gap-2"
+>
+  <app-island-card *ngFor="let island of islands" [island]="island" />
 </div>
 
 <router-outlet />
