--- a/frontend/src/app/components/island-card/island-card.component.html
+++ b/frontend/src/app/components/island-card/island-card.component.html
@@ -12,4 +12,29 @@
       {{ island.short_info }}
     </p>
   </div>
+
+  <div
+    class="cursor-pointer flex justify-end text-teal-900 m-2 italic font-bold"
+  >
+    <button
+      type="button"
+      class="hover:animate-pulse ease-in-out inline-flex items-center gap-x-1 rounded-md bg-slate-200 px-2.5 py-1.5 text-sm font-semibold text-teal-900 shadow-sm hover:bg-slate-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-slate-600"
+    >
+      Read More
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="w-4 h-4"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="m5.25 4.5 7.5 7.5-7.5 7.5m6-15 7.5 7.5-7.5 7.5"
+        />
+      </svg>
+    </button>
+  </div>
 </div>
