--- a/frontend/src/app/components/island-show/island-show.component.html
+++ b/frontend/src/app/components/island-show/island-show.component.html
@@ -1,6 +1,28 @@
 <div *ngIf="island; else loading">
   <div class="bg-white py-28">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
+      <button
+        (click)="goToIndex()"
+        type="button"
+        class="hover:animate-pulse ease-in-out inline-flex items-center gap-x-1 rounded-md bg-slate-200 px-2.5 py-1.5 text-sm font-semibold text-teal-900 shadow-sm hover:bg-slate-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-slate-600"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-4 h-4"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="m18.75 4.5-7.5 7.5 7.5 7.5m-6-15L5.25 12l7.5 7.5"
+          />
+        </svg>
+
+        Go Back
+      </button>
       <div
         class="mx-auto flex max-w-2xl flex-col items-end justify-between gap-16 lg:mx-0 lg:max-w-none lg:flex-row"
       >
