--- a/frontend/src/app/components/island-index/island-index.component.html
+++ b/frontend/src/app/components/island-index/island-index.component.html
@@ -1,9 +1,31 @@
-<div
-  class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 p-2 gap-2"
->
-  <app-island-card
-    *ngFor="let island of islands"
-    [loading]="loading"
-    [island]="island"
-  />
+<div *ngIf="islands.length > 0; else loading">
+  <div
+    class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 p-2 gap-2"
+  >
+    <app-island-card *ngFor="let island of islands" [island]="island" />
+  </div>
 </div>
+
+<ng-template #loading>
+  <div
+    class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 p-2 gap-2"
+  >
+    <div
+      *ngFor="let numberOfSkeletonCard of numberOfSkeletonCards"
+      class="flex flex-col h-full border rounded border-teal-900 animate-pulse"
+    >
+      <div class="h-40 bg-gray-300 w-full"></div>
+      <div class="flex-grow p-4 space-y-2">
+        <div class="h-3 bg-gray-300 rounded"></div>
+        <div class="h-3 bg-gray-300 rounded w-5/6"></div>
+        <div class="h-3 bg-gray-300 rounded w-4/6"></div>
+        <div class="h-3 bg-gray-300 rounded w-5/6"></div>
+        <div class="h-3 bg-gray-300 rounded w-3/6"></div>
+        <div class="h-3 bg-gray-300 rounded w-5/6"></div>
+      </div>
+      <div class="flex justify-end p-2">
+        <div class="w-24 h-8 bg-gray-300 rounded-md"></div>
+      </div>
+    </div>
+  </div>
+</ng-template>
