--- a/frontend/src/app/components/island-show/island-show.component.html
+++ b/frontend/src/app/components/island-show/island-show.component.html
@@ -47,7 +47,15 @@
         </div>
       </div>
 
-      <div class="flex justify-end mt-4 px-6">
+      <div class="flex justify-end mt-4 px-6 space-x-2">
+        <button
+          (click)="openGoogleMaps()"
+          type="button"
+          class="inline-flex items-center gap-x-1 rounded-md bg-slate-200 px-2.5 py-1.5 text-sm font-semibold text-teal-900 shadow-sm hover:bg-slate-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-slate-600"
+        >
+          Google Maps
+        </button>
+
         <a href="{{ island.url }}" target="_blank">
           <button
             type="button"
@@ -62,5 +70,44 @@
 </div>
 
 <ng-template #loading>
-  <p>Loading...</p>
+  <div class="bg-white py-28">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+      <div class="animate-pulse">
+        <div
+          class="mx-auto flex max-w-2xl flex-col items-end justify-between gap-16 lg:mx-0 lg:max-w-none lg:flex-row"
+        >
+          <div class="w-full lg:max-w-lg lg:flex-auto space-y-2">
+            <div class="h-8 bg-gray-300 rounded-md"></div>
+            <div class="h-4 bg-gray-300 rounded"></div>
+            <div class="h-4 bg-gray-300 rounded w-2/3"></div>
+            <div class="h-4 bg-gray-300 rounded w-5/6"></div>
+            <div class="h-4 bg-gray-300 rounded w-2/3"></div>
+            <div class="mt-40 h-96 bg-gray-300 rounded-2xl w-full"></div>
+          </div>
+          <div class="w-full lg:max-w-xl lg:flex-auto">
+            <div class="h-6 bg-gray-300 rounded-md w-1/2 mb-2"></div>
+            <div class="space-y-2">
+              <div class="h-4 bg-gray-300 rounded w-5/6"></div>
+              <div class="h-4 bg-gray-300 rounded w-6/6"></div>
+              <div class="h-4 bg-gray-300 rounded w-5/6"></div>
+              <div class="h-4 bg-gray-300 rounded w-6/6"></div>
+              <div class="h-4 bg-gray-300 rounded w-5/6"></div>
+              <div class="h-4 bg-gray-300 rounded w-4/6"></div>
+              <div class="h-4 bg-gray-300 rounded w-2/6"></div>
+              <div class="h-4 bg-gray-300 rounded w-4/6"></div>
+              <div class="h-4 bg-gray-300 rounded w-3/6"></div>
+              <div class="h-4 bg-gray-300 rounded w-5/6"></div>
+              <div class="h-4 bg-gray-300 rounded w-4/6"></div>
+              <div class="h-4 bg-gray-300 rounded w-5/6"></div>
+              <div class="h-4 bg-gray-300 rounded w-3/6"></div>
+            </div>
+          </div>
+        </div>
+        <div class="flex justify-end mt-4 px-6 space-x-2">
+          <div class="w-24 h-8 bg-gray-300 rounded-md"></div>
+          <div class="w-24 h-8 bg-gray-300 rounded-md"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 </ng-template>
