--- a/frontend/src/app/components/island-show/island-show.component.html
+++ b/frontend/src/app/components/island-show/island-show.component.html
@@ -21,7 +21,7 @@
           />
         </svg>
 
-        Go Back
+        Go to Islands
       </button>
       <div
         class="mx-auto flex max-w-2xl flex-col items-end justify-between gap-16 lg:mx-0 lg:max-w-none lg:flex-row"
