--- a/frontend/src/app/components/island-edit/island-edit.component.html
+++ b/frontend/src/app/components/island-edit/island-edit.component.html
@@ -92,8 +92,14 @@
 
         <div class="flex justify-end mt-4">
           <button
-            (click)="submit()"
-            class="inline-flex items-center gap-x-1 rounded-md bg-slate-200 px-2.5 py-1.5 text-sm font-semibold text-teal-900 shadow-sm hover:bg-slate-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-slate-600"
+            type="submit"
+            [disabled]="!islandForm.valid"
+            [ngClass]="
+              islandForm.valid
+                ? 'bg-slate-200 text-teal-900 shadow-sm hover:bg-slate-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-slate-600'
+                : 'cursor-not-allowed text-slate-200 bg-red-800'
+            "
+            class="inline-flex items-center gap-x-1 rounded-md px-2.5 py-1.5 text-sm font-semibold"
           >
             Update
           </button>
