--- a/frontend/src/app/components/island-card/island-card.component.html
+++ b/frontend/src/app/components/island-card/island-card.component.html
@@ -17,7 +17,7 @@
     class="cursor-pointer flex justify-end text-teal-900 m-2 italic font-bold"
   >
     <button
-      (click)="goToIsland(island.objectId)"
+      (click)="redirectToShow()"
       type="button"
       class="hover:animate-pulse ease-in-out inline-flex items-center gap-x-1 rounded-md bg-slate-200 px-2.5 py-1.5 text-sm font-semibold text-teal-900 shadow-sm hover:bg-slate-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-slate-600"
     >
