--- a/frontend/src/app/components/island-edit/island-edit.component.html
+++ b/frontend/src/app/components/island-edit/island-edit.component.html
@@ -4,7 +4,7 @@
       <div class="space-y-1">
         <div>
           <button
-            (click)="goToIndex()"
+            (click)="redirectToIndex()"
             type="button"
             class="hover:animate-pulse ease-in-out inline-flex items-center gap-x-1 rounded-md bg-slate-200 px-2.5 py-1.5 text-sm font-semibold text-teal-900 shadow-sm hover:bg-slate-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-slate-600"
           >
@@ -28,7 +28,7 @@
         </div>
         <div>
           <button
-            (click)="goToIndex()"
+            (click)="redirectToShow()"
             type="button"
             class="hover:animate-pulse ease-in-out inline-flex items-center gap-x-1 rounded-md bg-slate-200 px-2.5 py-1.5 text-sm font-semibold text-teal-900 shadow-sm hover:bg-slate-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-slate-600"
           >
