--- a/frontend/src/app/components/island-show/island-show.component.html
+++ b/frontend/src/app/components/island-show/island-show.component.html
@@ -2,7 +2,7 @@
   <div class="bg-white py-28">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <button
-        (click)="goToIndex()"
+        (click)="redirectToIndex()"
         type="button"
         class="hover:animate-pulse ease-in-out inline-flex items-center gap-x-1 rounded-md bg-slate-200 px-2.5 py-1.5 text-sm font-semibold text-teal-900 shadow-sm hover:bg-slate-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-slate-600"
       >
