--- a/frontend/src/app/components/not-found/not-found.component.html
+++ b/frontend/src/app/components/not-found/not-found.component.html
@@ -6,7 +6,7 @@
     </p>
     <div class="mt-8">
       <button
-        (click)="goToIndex()"
+        (click)="redirectToIndex()"
         class="text-lg cursor-pointer font-semibold rounded bg-teal-500 text-white px-6 py-3 hover:bg-teal-600 transition-colors duration-200 ease-in-out"
       >
         Go Home
