--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -79,7 +79,7 @@
     <div>
       <button
         *ngIf="!isLoggedIn()"
-        (click)="handleLogin()"
+        (click)="redirectToLogin()"
         type="button"
         class="inline-flex items-center gap-x-1.5 rounded-md bg-slate-100 px-2.5 py-1.5 text-sm font-semibold text-teal-900 shadow-sm hover:bg-slate-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-slate-600"
       >
