--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -40,3 +40,50 @@
     </form>
   </div>
 </div>
+
+<div
+  *ngIf="this.errorMessage"
+  class="flex justify-end fixed inset-x-0 bottom-0 p-4"
+>
+  <div
+    class="max-w-md rounded-lg bg-slate-100 p-6 shadow-lg ring-1 ring-gray-900/10"
+  >
+    <div class="w-full mx-auto bg-slate-300 rounded-lg h-1.5 -mt-2 mb-4">
+      <div
+        class="bg-red-700 h-1.5 rounded-lg"
+        [style.width]="(timeLeft / timeoutDurationInMs) * 100 + '%'"
+      ></div>
+    </div>
+    <div class="flex items-center gap-x-1 text-red-700 text-lg">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="w-6 h-6"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126ZM12 15.75h.007v.008H12v-.008Z"
+        />
+      </svg>
+      <div>Oops! The following error occured.</div>
+    </div>
+
+    <p class="mt-4 text-red-700">
+      {{ this.errorMessage }}
+    </p>
+
+    <div class="flex justify-end mt-4">
+      <button
+        (click)="clearErrorMessage()"
+        type="button"
+        class="text-lg cursor-pointer font-semibold rounded bg-slate-500 text-white px-4 py-1 hover:bg-slate-600 transition-colors duration-200 ease-in-out"
+      >
+        Close
+      </button>
+    </div>
+  </div>
+</div>
