--- a/frontend/src/app/components/island-edit/island-edit.component.html
+++ b/frontend/src/app/components/island-edit/island-edit.component.html
@@ -165,7 +165,7 @@
             type="submit"
             [disabled]="!islandForm.valid || updatingIsland"
             [ngClass]="
-              islandForm.valid || !updatingIsland
+              islandForm.valid
                 ? 'bg-slate-200 text-teal-900 shadow-sm hover:bg-slate-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-slate-600'
                 : 'cursor-not-allowed text-slate-200 bg-red-800'
             "
