--- a/frontend/src/app/components/island-edit/island-edit.component.html
+++ b/frontend/src/app/components/island-edit/island-edit.component.html
@@ -133,7 +133,10 @@
                   Warning! Photo must not exceed 5MB.
                 </div>
                 <div
-                  *ngIf="!islandForm.get('photo')?.errors?.maxSize"
+                  *ngIf="
+                    !islandForm.get('photo')?.errors?.maxSize &&
+                    !photoHasChanged()
+                  "
                   class="text-teal-700"
                 >
                   *An image thumbnail will be created after updating the island.
